cbm/src/store/store.h


typedef struct cbm_store cbm_store_t;
typedef enum {
    CBM_STORE_VERIFY_OK = 0,
    CBM_STORE_VERIFY_SOURCE_MISSING = 1,
    CBM_STORE_VERIFY_INTEGRITY_FAILED = 2,
    CBM_STORE_VERIFY_IO_FAILED = 3,
} cbm_store_verify_status_t;
enum {
    CBM_STORE_VERIFY_OPERATION_MAX = 64,
    CBM_STORE_VERIFY_DETAIL_MAX = 512,
    CBM_STORE_VERIFY_PATH_MAX = 4096,
};
typedef int32_t cbm_store_close_status_t;
enum {
    CBM_STORE_CLOSE_OK = 0,
    CBM_STORE_CLOSE_FINALIZE_FAILED = 1,
    CBM_STORE_CLOSE_OUTSTANDING_STATEMENTS = 2,
    CBM_STORE_CLOSE_FAILED = 3,
    CBM_STORE_CLOSE_INVALID_ARGUMENT = 4,
    CBM_STORE_CLOSE_ABI_VERSION = 1,
    CBM_STORE_CLOSE_CACHED_STATEMENT_COUNT = 34,
    CBM_STORE_CLOSE_STATEMENT_NAME_MAX = 64,
    CBM_STORE_CLOSE_SQL_TEXT_MAX = 512,
    CBM_STORE_CLOSE_SQL_SHA256_MAX = 65,
};
typedef struct {
    int32_t sqlite_error;
    char statement_name[CBM_STORE_CLOSE_STATEMENT_NAME_MAX];
} cbm_store_finalize_error_t;
typedef struct {
    uint32_t abi_version;
    uint32_t struct_size;
    cbm_store_close_status_t status;
    int32_t sqlite_close_code;
    uint32_t connection_was_present;
    uint32_t close_attempted;
    uint32_t connection_destroyed;
    uint32_t db_path_truncated;
    uint64_t db_path_bytes;
    uint32_t cached_statement_count;
    uint32_t finalize_error_count;
    cbm_store_finalize_error_t
        finalize_errors[CBM_STORE_CLOSE_CACHED_STATEMENT_COUNT];
    uint64_t outstanding_statement_count;
    uint64_t first_outstanding_sql_bytes;
    uint32_t first_outstanding_sql_available;
    uint32_t first_outstanding_sql_truncated;
    char first_outstanding_sql_sha256[CBM_STORE_CLOSE_SQL_SHA256_MAX];
    char first_outstanding_sql[CBM_STORE_CLOSE_SQL_TEXT_MAX];
    char db_path[CBM_STORE_VERIFY_PATH_MAX];
} cbm_store_close_result_t;
typedef struct {
    cbm_store_verify_status_t status;
    uint32_t native_error;
    int sqlite_error;
    bool db_present;
    bool wal_present;
    bool shm_present;
    bool family_frozen;
    bool family_guard_release_complete;
    bool scratch_created;
    bool scratch_cleanup_complete;
    uint32_t cleanup_native_error;
    uint64_t db_bytes;
    char db_sha256[65];
    uint64_t wal_bytes;
    char wal_sha256[65];
    char operation[CBM_STORE_VERIFY_OPERATION_MAX];
    char cleanup_operation[CBM_STORE_VERIFY_OPERATION_MAX];
    char detail[CBM_STORE_VERIFY_DETAIL_MAX];
    char scratch_path[CBM_STORE_VERIFY_PATH_MAX];
} cbm_store_verify_result_t;
typedef struct {
    int64_t id;
    const char *project;
    const char *label;          
    const char *name;           
    const char *atom_id;        
    const char *qualified_name; 
    const char *file_path;      
    int start_line;
    int end_line;
    bool source_present;
    const uint8_t *source_bytes;
    size_t source_len;
    const char *source_sha256;
    uint64_t start_byte;
    uint64_t end_byte;
    const char *properties_json; 
} cbm_node_t;
typedef struct {
    int64_t id;
    const char *project;
    int64_t source_id;
    int64_t target_id;
    const char *type;            
    const char *properties_json; 
} cbm_edge_t;
typedef struct {
    const char *project;
    const char *rel_path;
    const char *sha256;
    int64_t mtime_ns;
    int64_t size;
} cbm_file_hash_t;
int cbm_store_find_nodes_by_file_overlap(cbm_store_t *s, const char *project, const char *file_path,
                                         int start_line, int end_line, cbm_node_t **out,
                                         int *count);
int cbm_store_find_nodes_by_qn_suffix(cbm_store_t *s, const char *project, const char *suffix,
                                      cbm_node_t **out, int *count);
int cbm_store_node_degree(cbm_store_t *s, int64_t node_id, int *in_deg, int *out_deg);
int cbm_store_node_neighbor_names(cbm_store_t *s, int64_t node_id, int limit, char ***out_callers,
                                  int *caller_count, char ***out_callees, int *callee_count);
int cbm_store_batch_count_degrees(cbm_store_t *s, const int64_t *node_ids, int id_count,
                                  const char *edge_type, int *out_in, int *out_out);
int cbm_store_upsert_file_hash_batch(cbm_store_t *s, const cbm_file_hash_t *hashes, int count);
int cbm_store_find_edges_by_url_path(cbm_store_t *s, const char *project, const char *keyword,
                                     cbm_edge_t **out, int *count);
int cbm_store_restore_from(cbm_store_t *dst, cbm_store_t *src);
typedef struct {
    const char *project;
    const char *label;        
    const char *name_pattern; 
    const char *qn_pattern;   
    const char *file_pattern; 
    const char *relationship; 
    const char *direction;    
    int min_degree;           
    int max_degree;           
    int limit;                
    int offset;
    bool exclude_entry_points;
    bool include_connected;
    const char *sort_by; 
    bool case_sensitive;
    const char **exclude_labels; 
} cbm_search_params_t;
typedef struct {
    cbm_node_t node;
    int in_degree;
    int out_degree;
    const char **connected_names;
    int connected_count;
} cbm_search_result_t;
typedef struct {
    cbm_search_result_t *results;
    int count;
    int total; 
} cbm_search_output_t;
typedef struct {
    cbm_node_t node;
    int hop; 
} cbm_node_hop_t;
typedef struct {
    const char *from_name;
    const char *to_name;
    const char *type;
    double confidence;
    int64_t source_id; 
    int64_t target_id;
    const char *properties_json; 
} cbm_edge_info_t;
typedef struct {
    cbm_node_t root;
    cbm_node_hop_t *visited;
    int visited_count;
    cbm_edge_info_t *edges;
    int edge_count;
} cbm_traverse_result_t;
typedef struct {
    const char *label;
    int count;
    char **properties; 
    int property_count;
} cbm_label_count_t;
typedef struct {
    const char *type;
    int count;
    char **properties; 
    int property_count;
} cbm_type_count_t;
typedef struct {
    cbm_label_count_t *node_labels;
    int node_label_count;
    cbm_type_count_t *edge_types;
    int edge_type_count;
    const char **rel_patterns;
    int rel_pattern_count;
    const char **sample_func_names;
    int sample_func_count;
    const char **sample_class_names;
    int sample_class_count;
    const char **sample_qns;
    int sample_qn_count;
} cbm_schema_info_t;
cbm_store_t *cbm_store_open_memory(void);
cbm_store_t *cbm_store_open_path(const char *db_path);
cbm_store_t *cbm_store_open_path_query(const char *db_path);
cbm_store_verify_status_t cbm_store_open_path_query_verified(const char *db_path,
                                                             cbm_store_t **out_store,
                                                             cbm_store_verify_result_t *result);
cbm_store_verify_status_t cbm_store_open_path_project_query_verified(
    const char *db_path, const char *project, cbm_store_t **out_store,
    cbm_store_verify_result_t *result);
cbm_store_verify_status_t cbm_store_verify_path_project_snapshot(
    const char *db_path, const char *project, cbm_store_verify_result_t *result);
cbm_store_verify_status_t cbm_store_verify_path_project_snapshot_for_normalization(
    const char *db_path, const char *project, cbm_store_verify_result_t *result);
cbm_store_verify_status_t cbm_store_open_path_project_writer_existing(
    const char *db_path, const char *project, cbm_store_t **out_store,
    cbm_store_verify_result_t *result);
cbm_store_verify_status_t cbm_store_open_path_project_writer_existing_bound(
    const char *db_path, const char *project,
    const cbm_store_verify_result_t *expected_family, cbm_store_t **out_store,
    cbm_store_verify_result_t *result);
cbm_store_verify_status_t cbm_store_open_path_graph_verified(const char *db_path,
                                                             const char *project,
                                                             cbm_store_t **out_store,
                                                             cbm_store_verify_result_t *result);
const char *cbm_store_db_path(const cbm_store_t *s);
bool cbm_store_check_integrity(cbm_store_t *s);
cbm_store_t *cbm_store_open(const char *project);
cbm_store_close_status_t cbm_store_close(cbm_store_t **store,
                                         cbm_store_close_result_t *result);
void cbm_store_close_required(cbm_store_t **store, const char *operation);
const char *cbm_store_error(cbm_store_t *s);
int cbm_store_error_code(cbm_store_t *s);
void cbm_store_clear_error(cbm_store_t *s);
int cbm_store_begin(cbm_store_t *s);
int cbm_store_commit(cbm_store_t *s);
int cbm_store_rollback(cbm_store_t *s);
int cbm_store_begin_bulk(cbm_store_t *s);
int cbm_store_end_bulk(cbm_store_t *s);
int cbm_store_drop_indexes(cbm_store_t *s);
int cbm_store_create_indexes(cbm_store_t *s);
int cbm_store_checkpoint(cbm_store_t *s);