crates/cbm-sys/src/bindings.rs

unsafe extern "C" {
    pub fn cbm_store_find_nodes_by_file_overlap(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        file_path: *const ::std::os::raw::c_char,
        start_line: ::std::os::raw::c_int,
        end_line: ::std::os::raw::c_int,
        out: *mut *mut cbm_node_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_nodes_by_qn_suffix(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        suffix: *const ::std::os::raw::c_char,
        out: *mut *mut cbm_node_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_node_degree(
        s: *mut cbm_store_t,
        node_id: i64,
        in_deg: *mut ::std::os::raw::c_int,
        out_deg: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_node_neighbor_names(
        s: *mut cbm_store_t,
        node_id: i64,
        limit: ::std::os::raw::c_int,
        out_callers: *mut *mut *mut ::std::os::raw::c_char,
        caller_count: *mut ::std::os::raw::c_int,
        out_callees: *mut *mut *mut ::std::os::raw::c_char,
        callee_count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_batch_count_degrees(
        s: *mut cbm_store_t,
        node_ids: *const i64,
        id_count: ::std::os::raw::c_int,
        edge_type: *const ::std::os::raw::c_char,
        out_in: *mut ::std::os::raw::c_int,
        out_out: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_upsert_file_hash_batch(
        s: *mut cbm_store_t,
        hashes: *const cbm_file_hash_t,
        count: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_find_edges_by_url_path(
        s: *mut cbm_store_t,
        project: *const ::std::os::raw::c_char,
        keyword: *const ::std::os::raw::c_char,
        out: *mut *mut cbm_edge_t,
        count: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_restore_from(
        dst: *mut cbm_store_t,
        src: *mut cbm_store_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_search_params_t {
    pub project: *const ::std::os::raw::c_char,
    pub label: *const ::std::os::raw::c_char,
    pub name_pattern: *const ::std::os::raw::c_char,
    pub qn_pattern: *const ::std::os::raw::c_char,
    pub file_pattern: *const ::std::os::raw::c_char,
    pub relationship: *const ::std::os::raw::c_char,
    pub direction: *const ::std::os::raw::c_char,
    pub min_degree: ::std::os::raw::c_int,
    pub max_degree: ::std::os::raw::c_int,
    pub limit: ::std::os::raw::c_int,
    pub offset: ::std::os::raw::c_int,
    pub exclude_entry_points: bool,
    pub include_connected: bool,
    pub sort_by: *const ::std::os::raw::c_char,
    pub case_sensitive: bool,
    pub exclude_labels: *mut *const ::std::os::raw::c_char,
}
impl Default for cbm_search_params_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_search_result_t {
    pub node: cbm_node_t,
    pub in_degree: ::std::os::raw::c_int,
    pub out_degree: ::std::os::raw::c_int,
    pub connected_names: *mut *const ::std::os::raw::c_char,
    pub connected_count: ::std::os::raw::c_int,
}
impl Default for cbm_search_result_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_search_output_t {
    pub results: *mut cbm_search_result_t,
    pub count: ::std::os::raw::c_int,
    pub total: ::std::os::raw::c_int,
}
impl Default for cbm_search_output_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_node_hop_t {
    pub node: cbm_node_t,
    pub hop: ::std::os::raw::c_int,
}
impl Default for cbm_node_hop_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_edge_info_t {
    pub from_name: *const ::std::os::raw::c_char,
    pub to_name: *const ::std::os::raw::c_char,
    pub type_: *const ::std::os::raw::c_char,
    pub confidence: f64,
    pub source_id: i64,
    pub target_id: i64,
    pub properties_json: *const ::std::os::raw::c_char,
}
impl Default for cbm_edge_info_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_traverse_result_t {
    pub root: cbm_node_t,
    pub visited: *mut cbm_node_hop_t,
    pub visited_count: ::std::os::raw::c_int,
    pub edges: *mut cbm_edge_info_t,
    pub edge_count: ::std::os::raw::c_int,
}
impl Default for cbm_traverse_result_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_label_count_t {
    pub label: *const ::std::os::raw::c_char,
    pub count: ::std::os::raw::c_int,
    pub properties: *mut *mut ::std::os::raw::c_char,
    pub property_count: ::std::os::raw::c_int,
}
impl Default for cbm_label_count_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_type_count_t {
    pub type_: *const ::std::os::raw::c_char,
    pub count: ::std::os::raw::c_int,
    pub properties: *mut *mut ::std::os::raw::c_char,
    pub property_count: ::std::os::raw::c_int,
}
impl Default for cbm_type_count_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbm_schema_info_t {
    pub node_labels: *mut cbm_label_count_t,
    pub node_label_count: ::std::os::raw::c_int,
    pub edge_types: *mut cbm_type_count_t,
    pub edge_type_count: ::std::os::raw::c_int,
    pub rel_patterns: *mut *const ::std::os::raw::c_char,
    pub rel_pattern_count: ::std::os::raw::c_int,
    pub sample_func_names: *mut *const ::std::os::raw::c_char,
    pub sample_func_count: ::std::os::raw::c_int,
    pub sample_class_names: *mut *const ::std::os::raw::c_char,
    pub sample_class_count: ::std::os::raw::c_int,
    pub sample_qns: *mut *const ::std::os::raw::c_char,
    pub sample_qn_count: ::std::os::raw::c_int,
}
impl Default for cbm_schema_info_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn cbm_store_open_memory() -> *mut cbm_store_t;
}
unsafe extern "C" {
    pub fn cbm_store_open_path(db_path: *const ::std::os::raw::c_char) -> *mut cbm_store_t;
}
unsafe extern "C" {
    pub fn cbm_store_open_path_query(db_path: *const ::std::os::raw::c_char) -> *mut cbm_store_t;
}
unsafe extern "C" {
    pub fn cbm_store_open_path_query_verified(
        db_path: *const ::std::os::raw::c_char,
        out_store: *mut *mut cbm_store_t,
        result: *mut cbm_store_verify_result_t,
    ) -> cbm_store_verify_status_t;
}
unsafe extern "C" {
    pub fn cbm_store_open_path_project_query_verified(
        db_path: *const ::std::os::raw::c_char,
        project: *const ::std::os::raw::c_char,
        out_store: *mut *mut cbm_store_t,
        result: *mut cbm_store_verify_result_t,
    ) -> cbm_store_verify_status_t;
}
unsafe extern "C" {
    pub fn cbm_store_verify_path_project_snapshot(
        db_path: *const ::std::os::raw::c_char,
        project: *const ::std::os::raw::c_char,
        result: *mut cbm_store_verify_result_t,
    ) -> cbm_store_verify_status_t;
}
unsafe extern "C" {
    pub fn cbm_store_verify_path_project_snapshot_for_normalization(
        db_path: *const ::std::os::raw::c_char,
        project: *const ::std::os::raw::c_char,
        result: *mut cbm_store_verify_result_t,
    ) -> cbm_store_verify_status_t;
}
unsafe extern "C" {
    pub fn cbm_store_open_path_project_writer_existing(
        db_path: *const ::std::os::raw::c_char,
        project: *const ::std::os::raw::c_char,
        out_store: *mut *mut cbm_store_t,
        result: *mut cbm_store_verify_result_t,
    ) -> cbm_store_verify_status_t;
}
unsafe extern "C" {
    pub fn cbm_store_open_path_project_writer_existing_bound(
        db_path: *const ::std::os::raw::c_char,
        project: *const ::std::os::raw::c_char,
        expected_family: *const cbm_store_verify_result_t,
        out_store: *mut *mut cbm_store_t,
        result: *mut cbm_store_verify_result_t,
    ) -> cbm_store_verify_status_t;
}
unsafe extern "C" {
    pub fn cbm_store_open_path_graph_verified(
        db_path: *const ::std::os::raw::c_char,
        project: *const ::std::os::raw::c_char,
        out_store: *mut *mut cbm_store_t,
        result: *mut cbm_store_verify_result_t,
    ) -> cbm_store_verify_status_t;
}
unsafe extern "C" {
    pub fn cbm_store_db_path(s: *const cbm_store_t) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn cbm_store_check_integrity(s: *mut cbm_store_t) -> bool;
}
unsafe extern "C" {
    pub fn cbm_store_open(project: *const ::std::os::raw::c_char) -> *mut cbm_store_t;
}
unsafe extern "C" {
    pub fn cbm_store_close(
        store: *mut *mut cbm_store_t,
        result: *mut cbm_store_close_result_t,
    ) -> cbm_store_close_status_t;
}
unsafe extern "C" {
    pub fn cbm_store_close_required(
        store: *mut *mut cbm_store_t,
        operation: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn cbm_store_error(s: *mut cbm_store_t) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn cbm_store_error_code(s: *mut cbm_store_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_clear_error(s: *mut cbm_store_t);
}
unsafe extern "C" {
    pub fn cbm_store_begin(s: *mut cbm_store_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_commit(s: *mut cbm_store_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_rollback(s: *mut cbm_store_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_begin_bulk(s: *mut cbm_store_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_end_bulk(s: *mut cbm_store_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_drop_indexes(s: *mut cbm_store_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_create_indexes(s: *mut cbm_store_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cbm_store_checkpoint(s: *mut cbm_store_t) -> ::std::os::raw::c_int;
}
